# endoreg-db-api

./: .gitignore  README.md  devenv.nix  diagram.md  diagram2.md  env-setup.py  env_setup.py  flake.nix  hello.py  manage.py  pyproject.toml  result  run-server.sh
conf_template/: db.yaml  default.env
docs/models/: overview.md
endoreg_db_api/: Secure_Requests.md  TODO.md  asgi.py  lx-annotate.code-workspace  manage.py  run_gunicorn.py  settings.py  settings_base.py  urls.py  views.py  wsgi.py
endoreg_db_api/api/: urls.py  views.py
endoreg_db_api/endoreg_db_api/: wsgi.py
endoreg_db_api/endoreg_db_api/settings_base/: __init__.py
endoreg_db_api/settings_dev/: __init__.py
endoreg_db_api/settings_prod/: __init__.py
endoreg_db_api/utils/: __init__.py
scripts/: ensure_psql_pwd_file_exists.py  ensure_psql_user.py  make-psql-pwd.sh  make_conf.py  set_development_settings.py  set_production_settings.py
src/endoreg_db_api/: asgi.py  settings.py  urls.py  wsgi.py
