[project]
name = "endoreg-db-api"
version = "0.1.0"
description = "EndoReg Db API Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.3",
    "endoreg-db>=0.5.3",
    "icecream>=2.1.4",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "torch>=2.5.1", # Should be same version as version provided in devenv.nix
    "whitenoise>=6.8.2",
]

[tool.setuptools]
packages = ["endoreg_db_api"]
