[project]
name = "endoreg-db-api"
version = "0.1.2"
description = "EndoReg Db API Service"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]
maintainers = [
    { name = "Thomas J. Lux", email = "lux_t1@ukw.de" },
    { name = "Max Hild" },
    { name = "Hamza Zahid" },
    { name = "Peter Kowalczyk" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "asgiref>=3.8.1",
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.3",
    "django-cors-headers>=4.7.0",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.15.2",
    "dotenv>=0.9.9",
    "endoreg-db>=0.6",
    "icecream>=2.1.4",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "torch>=2.5.1", # Should be same version as version provided in devenv.nix
    "whitenoise>=6.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["endoreg_db_api"]
